feat: global search api (#10)
