# biz/handler/common.go
@@ -4,6 +4,7 @@ type Code int32
 
 const (
 	Code_Success       Code = 200
+	Code_ParamErr      Code = 400
 	Code_Unauthorized  Code = 401
 	Code_Err           Code = 500
 	Code_DBErr         Code = 501
